--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 /* General list item styling */
-/* .list_item {
+.list_item {
   width: 33%;
   display: inline-block;
   box-sizing: border-box;
   padding: 15px;
   vertical-align: top;
-} */
+}
 
 /* General card styling */
 .card {
@@ -27,23 +27,23 @@
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
 }
 
-/* .card--flat {
+.card--flat {
   display: flex;
   flex-direction: column;
-} */
+}
 
 .card-image {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100% !important;
-  height: 50% !important;
+  width: 100%;
+  height: 60%; /* Adjusted height to cover more of the card */
   overflow: hidden;
 }
 
 .card-image img {
   width: 100%;
-  height: auto;
+  height: 100%; /* Ensures the image fills the entire .card-image container */
   object-fit: cover;
 }
 
@@ -72,12 +72,8 @@
   text-align: center;
 }
 
-.card-property-address-top {
-  text-align: center !important;
-}
-
 .card-property-description {
-  display: none !important;
+  display: none !important; /* You can remove this line if not needed */
 }
 
 .card-property-information {
